@@ -341,3 +341,5 @@ Version 20080728.450 (Saturday, March 5, 2011)
    buttons except in the Customize Toolbar dialog.
 
 Version ${Version} (${Date})
+ - Added rudimentary support for editing Google Docs text documents created in
+   June 2010 or later (requires Firefox 4 or equivalent).
